# codepass

./: .gitignore  README.md  codepass.report.json  dockerfile  pyproject.toml
codepass/: __main__.py  abstraction_levels_evaluation.py  complexity_evaluation.py  file_report.py  get_config.py  get_report_file.py  main.py  model.py  parallel_runtime.py  parsers.py  prompts.py  read_code_files.py  token_budget_estimator.py  utils.py
codepass/llm/: a_score_parser.py  b_score_parser.py  estimate_a_score_prompt.py  estimate_b_score_prompt.py  improvement_suggestion_a_score_prompt.py  improvement_suggestion_b_score_prompt.py  improvement_suggestion_parser.py  improvement_suggestion_prompt.py  model.py
codepass/scores/: evaluate_a_score.py  evaluate_b_score.py  suggest_improvements.py
