[tool.poetry]
name = "codepass"
version = "0.1.3"
description = ""
authors = ["airtucha <airtucha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"
mypy = "1.9.0"
typer = "^0.12.5"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codepass = "codepass.main:run_main"
